# WiQAS

./: +4  .env  .gitignore  .pre-commit-config.yaml  2025-10-18T15-49-22.json  LICENSE  RAW_COHFIE.txt  README.md  about-gpu-2025-10-10T06-24-35-309Z.txt  batch_output.json  detailed_report_gemma_qdecomp.txt  detailed_report_gemma_trans.txt  detailed_report_sealion_full.txt  detailed_sealion_disabled.txt  json-to-csv.py  pyproject.toml  requirements.txt  run.py  run_enabled.py  run_generation.py  run_retrieval.py  set_dependencies.py  test_gpu.py  test_gpu_optimizations.py  test_gpu_rag.py
.github/workflows/: ci.yml
backend/: app.py  dependencies.py
backend/api/: health.py  ingestion.py  models.py  rag.py  settings.py
backend/models/: ingestion.py  models.py  rag.py  settings.py
backend/websockets/: chat.py
etc/systemd/system/: ollama.service  wiqas.service
frontend/: .env  cleanup-phase1.ps1  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: hooks.server.ts
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/styles/: main.css
frontend/static/: robots.txt
scripts/: setup_gcp.sh  start_gcp.sh  stop_gcp.sh  transfer_kb.sh  validate_gcp.sh
src/core/: ingest.py  llm.py
src/evaluation/: evaluation_dataset.json  qa_generator.py  ragas_sample.json  reshaper.py
src/evaluation/[1] qa-pair-generation/: qa_generator.py
src/evaluation/[2] refinement/: cultural_refiner.py  dataset_eval.py  refiner.py  reshaper.py
src/evaluation/[3] ragas/: 3. ragas_dataset_BERTSCORE_20251127_232811.txt  3. ragas_dataset_evaluation_20251127_231022.txt  cultural_judge.py  merged_results.csv  ragas_eval.py  (+6 more)
src/generation/: context_preparer.py  generator.py  prompt_builder.py  query_classifier.py
src/retrieval/: __init__.py  embeddings.py  evaluator.py  fusion.py  query_decomposer.py  reranker.py  retriever.py  search.py  vector_store.py
src/utilities/: cohfie_json_loader.py  config.py  gpu_utils.py  utils.py
test/: conftest.py  test_gpu.py  test_query_decomposition.py
test/core/: test_llm.py
test/generation/: test_context_preparer.py  test_query_classifier.py
(+142 files in other folders)
